Add transcription feature for tab audio capture. Implemented UI for transcription interface, including controls for starting/stopping transcription and displaying results. Updated permissions in manifest for tab capture. Enhanced popup styles for recording states and transcript display.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "storage",
     "unlimitedStorage",
     "scripting",
-    "sidePanel"
+    "sidePanel",
+    "tabCapture"
   ],
   "host_permissions": [
     "<all_urls>"
